JVKP/src/objects/college1__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Code__c</fullName>
        <label>College Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>mobile</label>
        <type>Phone</type>
    </fields>
    <label>college</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>college1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>